apps/bookinfo/manifests/productpage/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - bookinfo.mkt.posanhanguera.com.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productpage
        port:
          number: 9080
